@@ -58,13 +58,12 @@ our $Test_build = {
     stderr_save_lines => 100,
 };
 
-# Test run phase
-our $Test_run = {
-    perfbase_xml => "inp_test_run_correctness.xml",
+# Test specify phase
+our $Test_specify = {
+    pass => "&eq(&test_exit_status(), 0)",
     argv => "",
     np => "&env_max_np()",
     np_ok => 1,
-    pass => "&eq(&test_exit_status(), 0)",
     timeout => 30,
 
     save_stdout_on_pass => 0,
