@@ -2,6 +2,7 @@
 #
 # Copyright (c) 2005-2006 The Trustees of Indiana University.
 #                         All rights reserved.
+# Copyright (c) 2006      Cisco Systems, Inc.  All rights reserved.
 # $COPYRIGHT$
 # 
 # Additional copyrights may follow
@@ -19,7 +20,7 @@ use Data::Dumper;
 
 #--------------------------------------------------------------------------
 
-sub Run {
+sub Specify {
     my ($ini, $section, $build_dir, $mpi_install) = @_;
     my $ret;
 
