@@ -285,8 +285,7 @@ stdout_save_lines = 100
 np = &env_max_procs()
 
 module = Simple
-simple_tests = &find_executables(".")
-simple_only_if_exec_exists = 1
+simple_only:tests = &find_executables(".")
 
 #----------------------------------------------------------------------
 
@@ -301,8 +300,18 @@ stdout_save_lines = 100
 np = &min(64, &env_max_procs())
 
 module = Simple
-simple_tests = &find_executables("src")
-simple_only_if_exec_exists = 1
+# This group of tests uses the defaults from above and should all
+# return an exit status of 0
+simple_pass:tests = &find_executables("src")
+
+# This group of tests is from the "supposed_to_fail" fail, and is
+# exclusive from the other group (meaning that anything in this group
+# should be removed from the other group).  The programs in the group
+# should also have a nonzero exit status.
+simple_fail:tests = &find_executables("src/" . "&cat("supposed_to_fail")")
+simple_fail:np = &env_max_procs()
+simple_fail:pass = &ne(&test_exit_status(), 0)
+simple_fail:exclusive = 1
 
 #----------------------------------------------------------------------
 
@@ -316,9 +325,17 @@ stdout_save_lines = 100
 np = &env_max_procs()
 
 module = Simple
-simple_tests = &find_executables("collective", "communicator", "datatype", \
-                          "dynamic", "environment", "group", "info", \
-                          "io", "onesided", "pt2pt", "topology")
+# Similar rationale to the intel test run section
+simple_first:tests = &find_executables("collective", "communicator", \
+                                       "datatype", "dynamic", "environment", \
+                                       "group", "info", "io", "onesided", \
+                                       "pt2pt", "topology")
+
+# Similar rationale to the intel test run section
+simple_fail:tests = environment/abort environment/final
+simple_fail:pass = &ne(&test_exit_status(), 0)
+simple_fail:exclusive = 1
+simple_fail:np = &env_max_procs()
 
 #----------------------------------------------------------------------
 
@@ -332,7 +349,7 @@ stdout_save_lines = 100
 np = &env_max_procs()
 
 module = Simple
-simple_tests = src/IMB-MPI1
+simple_only:tests = src/IMB-MPI1
 
 #======================================================================
 # Reporter phase
